<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">LeleDroid</string>
	<string name="info">Πληροφορίες</string>
	<string name="str">Στρατιώτης</string>
	<string name="add">Προσθήκη στρατιώτη</string>
	<string name="selectStr">Επιλογή στρατιώτη</string>

	<string name="details">Λεπτομέρειες</string>
	<string name="chart">Γράφημα</string>
	<string name="edit">Επεξεργασία</string>
	<string name="delete">Διαγραφή</string>
	<string name="deleteConfirmation">Επιβεβαίωση διαγραφής</string>
	<string name="vathmoiInfo">Κλίμακα βαθμών</string>
	<string name="rate">Βαθμολόγηση</string>
	<string name="share">Κοινοποίηση</string>
	<string name="shareAppText">Δες το LeleDroid, μια καταπληκτική εφαρμογή για Android!\n
	Θα τη βρεις δωρεάν στο Android Market και στο </string>
	

	<string name="dateOut">Ημερομηνία απόλυσης</string>
	<string name="dateIn">Ημερομηνία κατάταξης</string>
	<string name="strName">Όνομα στρατιώτη</string>
	<string name="adeia">Ημέρες άδειας</string>
	<string name="filaki">Ημέρες φυλακής</string>
	<string name="ipiretithike">Ημέρες που υπηρετήθηκαν</string>
	<string name="ipolipo">Ημέρες που απομένουν</string>

	<string name="detailsTitle">Λεπτομέρειες στρατιώτη</string>
	<string name="secs">Δευτερόλεπτα...</string>
	<string name="mins">Λεπτά...</string>
	<string name="hours">Ώρες...</string>
	<string name="days">Μέρες...</string>
	<string name="weeks">Εβδομάδες...</string>
	<string name="months">Μήνες...</string>
	<string name="pososto">Ποσοστό...</string>
	<string name="plusToday">και σήμερα</string>

	<string name="deleteMessage">Να διαγραφεί ο επιλεγμένος στρατιώτης;</string>

	<string name="ok">Εντάξει</string>
	<string name="cancel">Άκυρο</string>
	<string name="back">Επιστροφή</string>

	<string name="widgetTitle">Ρυθμίσεις του LeleDroid widget</string>
	<string name="textColor">Χρώμα κειμένου</string>
	<string name="bgColor">Χρώμα παρασκηνίου</string>
	<string name="widgetDisplayVathmos">Εμφάνιση λελεδοβαθμού</string>
	<string name="widgetDisplayName">Εμφάνιση ονόματος</string>
	<string name="widgetDisplayImage">Εμφάνιση εικόνας λελεδοβαθμού</string>
	<string name="widgetDisplayDays">Εμφάνιση εναπομείναντων ημερών</string>
	<string name="widgetDisplayProgress">Εμφάνιση μπάρας ποσοστού</string>
	<string name="emptyList">Δεν υπάρχει κάποιος διαθέσιμος στρατιώτης. Παρακαλώ
		προσθέστε κάποιον από την εφαρμογή LeleDroid</string>
	<string name="emptyDisplay">Επιλέξτε τουλάχιστον ένα στοιχείο για εμφάνιση</string>	
	<string name="selectAction">Ενέργεια κατά το κλικ</string>
	<string name="none">Τίποτα</string>
	<string name="light">Φωτεινό</string>
	<string name="dark">Σκούρο</string>
	
	<string name="emptyAdeia">Παρακαλώ συμπληρώστε της ημέρες άδειας</string>
	<string name="emptyName">Παρακαλώ συμπληρώστε το όνομα στρατιώτη</string>
	<string name="emptyFilaki">Παρακαλώ συμπληρώστε τις ημέρες φυλακής</string>
	<string name="dateForward">Η ημερομηνία κατάταξης είναι πιο μπροστά από την
		ημερομηνία απόλυσης. Παρακαλώ διορθώστε.</string>

	<string name="donate">Δωρεά</string>
	<string name="contact">Επικοινωνία :</string>
	<string name="site">http://code.google.com/p/leledroid/</string>
	<string name="copyright">Copyright (c) 2011 Βασιλάκος Γεώργιος</string>
	<string name="description">Το LeleDroid εμφανίζει πληροφορίες σχετικά με το
		υπόλοιπο της θητείας ενός στρατιώτη.</string>
	<string name="licence">Άδεια χρήσης</string>
	<string name="licenceText">This program is free software: you can redistribute
		it and/or modify
		it under the terms of the GNU General Public License
		as published by
		the Free Software Foundation, either version 3 of the
		License, or
		(at your option) any later version.

		This program is
		distributed in the hope that it will be useful,
		but WITHOUT ANY
		WARRANTY; without even the implied warranty of
		MERCHANTABILITY or
		FITNESS FOR A PARTICULAR PURPOSE. See the
		GNU General Public License
		for more details.

		You should have received a copy of the GNU General
		Public License
		along with this program. If not, see
		http://www.gnu.org/licenses/</string>
		
		<string name="v0">ΣΤΡΑΤΙΩΤΗΣ</string>
		<string name="v1">ΥΠΟΔΕΚΑΝΕΑΣ</string>
		<string name="v2">ΔΕΚΑΝΕΑΣ</string>
		<string name="v3">ΛΟΧΙΑΣ</string>
		<string name="v4">ΕΠΙΛΟΧΙΑΣ</string>
		<string name="v5">ΑΡΧΙΛΟΧΙΑΣ</string>
		<string name="v6">ΑΝΘΥΠΑΣΠΙΣΤΗΣ</string>
		<string name="v7">ΑΝΘΥΠΟΛΟΧΑΓΟΣ</string>
		<string name="v8">ΥΠΟΛΟΧΑΓΟΣ</string>
		<string name="v9">ΛΟΧΑΓΟΣ</string>
		<string name="v10">ΤΑΓΜΑΤΑΡΧΗΣ</string>
		<string name="v11">ΑΝΤΙΣΥΝΤΑΓΜΑΤΑΡΧΗΣ</string>
		<string name="v12">ΣΥΝΤΑΓΜΑΤΑΡΧΗΣ</string>
		<string name="v13">ΤΑΞΙΑΡΧΟΣ</string>
		<string name="v14">ΥΠΟΣΤΡΑΤΗΓΟΣ</string>
		<string name="v15">ΑΝΤΙΣΤΡΑΤΗΓΟΣ</string>
		<string name="v16">ΣΤΡΑΤΗΓΟΣ</string>
		<string name="v17">ΠΟΛΙΤΗΣ</string>

</resources>
