<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/detailsScrollView"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:gravity="center_horizontal">
		<ImageView android:id="@+id/infoImage" android:src="@drawable/img1"
			android:layout_margin="4dip" android:layout_width="wrap_content"
			android:layout_height="wrap_content"></ImageView>
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:gravity="center_horizontal">
			<TextView android:text="@string/app_name" android:textSize="15sp"
				android:layout_margin="5dip" android:textStyle="bold"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
			<TextView android:id="@+id/version"
				android:layout_margin="5dip" android:textStyle="italic"
				android:gravity="center" android:layout_width="wrap_content"
				android:layout_height="wrap_content"></TextView>
		</LinearLayout>
		<TextView android:text="@string/description" android:gravity="center_horizontal"
			android:layout_margin="5dip" android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView>
		<TextView android:text="@string/copyright"
			android:layout_margin="4dip" android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView>
		<TextView android:text="@string/contact" android:id="@+id/contact"
			android:layout_margin="2dip" android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView>

		<TextView android:text="@string/site" android:layout_margin="2dip"
			android:id="@+id/site" android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView>

		<!--  LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_margin="5dip" android:orientation="horizontal"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:gravity="bottom">
			<Button android:text="@string/licence" android:id="@+id/licenceButton"
				android:drawableLeft="@drawable/ic_menu_info_details"
				android:onClick="licenceButtonClicked" android:layout_width="155dip"
				android:layout_height="wrap_content"></Button>
			<Button android:text="@string/donate" android:id="@+id/donateButton"
				android:drawableLeft="@drawable/ic_menu_star"
				android:onClick="donateButtonClicked" android:layout_width="155dip"
				android:layout_height="wrap_content"></Button>
		</LinearLayout -->
	</LinearLayout>
</ScrollView>