<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:paddingTop="10dip">
	<LinearLayout android:id="@+id/space"
		android:layout_height="wrap_content" android:layout_width="fill_parent">
		<Button android:text="@string/info" android:id="@+id/infoButton"
			android:layout_margin="5dip" android:layout_width="wrap_content"
			android:drawableLeft="@drawable/ic_menu_info_details" 
			android:layout_height="wrap_content" android:onClick="onInfoButtonClick"></Button>
		<LinearLayout android:id="@+id/space"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:gravity="right">
			<Button android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:layout_margin="5dip"
				android:id="@+id/addButton" android:text="@string/add"
				android:drawableLeft="@drawable/ic_menu_add"
				android:onClick="onAddButtonClick"></Button>
		</LinearLayout>
	</LinearLayout>
	<TextView android:id="@+id/selectStrLabel" android:text="@string/selectStr"
		android:gravity="center" android:layout_width="fill_parent"
		android:layout_margin="5dip" android:layout_height="wrap_content"></TextView>
	<ListView android:id="@+id/list" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:visibility="visible" />
</LinearLayout>
