<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailsScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="10dip" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- name of str -->

        <RelativeLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/str_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/strName" >
            </TextView>

            <EditText
                android:id="@+id/str_name_et"
                android:layout_width="140dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="7dip"
                android:inputType="textPersonName"
                android:text="lelouras" >
            </EditText>
        </RelativeLayout>

        <!-- imera eisagogis -->

        <RelativeLayout
            android:id="@+id/LinearLayout03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/str_indate_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/dateIn" >
            </TextView>

            <EditText
                android:id="@+id/str_indate_et"
                android:layout_width="140dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:focusable="false"
                android:inputType="date"
                android:text="" >
            </EditText>
        </RelativeLayout>

        <!-- imera apolisis -->

        <RelativeLayout
            android:id="@+id/LinearLayout04"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/str_outdate_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/dateOut" >
            </TextView>

            <EditText
                android:id="@+id/str_outdate_et"
                android:layout_width="140dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:focusable="false"
                android:inputType="date"
                android:text="" >
            </EditText>
        </RelativeLayout>

        <!-- imeres adeias -->

        <RelativeLayout
            android:id="@+id/LinearLayout05"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/str_adeia_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/adeia" >
            </TextView>

            <EditText
                android:id="@+id/str_adeia_et"
                android:layout_width="140dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:inputType="number"
                android:text="32" >
            </EditText>
        </RelativeLayout>

        <!-- imeres filakis -->

        <RelativeLayout
            android:id="@+id/LinearLayout06"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/str_filaki_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/filaki" >
            </TextView>

            <EditText
                android:id="@+id/str_filaki_et"
                android:layout_width="140dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:inputType="number"
                android:text="0" >
            </EditText>
        </RelativeLayout>

        <!-- koumpia -->

        <LinearLayout
            android:id="@+id/LinearLayout08"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dip"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="130dip"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_menu_revert"
                android:onClick="cancelButtonClicked"
                android:text="@string/cancel" >
            </Button>

            <Button
                android:id="@+id/ok_button"
                android:layout_width="130dip"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_menu_save"
                android:onClick="okButtonClicked"
                android:text="@string/ok" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</ScrollView>