<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
		android:id="@+id/Lay1"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<TextView
			android:id="@+id/onoma"
			android:text="ONOMA STRATIOTI"
			android:textSize="16sp"
			android:textColor="#FFF"
			android:shadowColor="#777"  
        	android:shadowRadius="3"
			android:layout_margin="5dip"
			android:layout_width="fill_parent"
			android:gravity="center_horizontal"
			android:layout_height="wrap_content"></TextView>

		<LinearLayout
			android:id="@+id/Lay2"
			android:layout_width="fill_parent"
			android:layout_height="160dip"
			android:orientation="horizontal">
			<ImageView
				android:id="@+id/vathmosImg"
				android:src="@drawable/img1"
				android:layout_alignParentLeft="true"
				android:gravity="center_horizontal"
				android:layout_width="150dip"
				android:layout_height="150dip"></ImageView>
			<LinearLayout
				android:id="@+id/pieChart"
				android:layout_height="170dip"
				android:layout_toRightOf="@id/vathmosImg"
				android:layout_width="wrap_content">
			</LinearLayout>
		</LinearLayout>

		<ScrollView
			android:id="@+id/detailsScrollView"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<LinearLayout
				android:id="@+id/Lay3"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:orientation="vertical">

				<!-- SECONDS -->

				<RelativeLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<TextView
						android:id="@+id/secs_label"
						android:text="@string/secs"
						android:layout_marginLeft="7dip"
						android:layout_width="wrap_content"
						android:layout_alignParentLeft="true"
						android:layout_height="wrap_content"></TextView>

					<TextView
						android:id="@+id/secs"
						android:text="0"
						android:layout_marginRight="12dip"
						android:layout_alignParentRight="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"></TextView>

				</RelativeLayout>

				<!-- MINUTES -->

				<RelativeLayout
					android:layout_width="fill_parent"
					android:layout_margin="1dip"
					android:layout_alignParentLeft="true"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<TextView
						android:id="@+id/mins_label"
						android:text="@string/mins"
						android:layout_marginLeft="7dip"
						android:layout_alignParentLeft="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"></TextView>
					<TextView
						android:id="@+id/mins"
						android:text="0"
						android:layout_marginRight="10dip"
						android:layout_alignParentRight="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"></TextView>
				</RelativeLayout>

				<!-- HOURS -->

				<RelativeLayout
					android:layout_width="fill_parent"
					android:layout_margin="1dip"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<TextView
						android:id="@+id/hours_label"
						android:text="@string/hours"
						android:layout_alignParentLeft="true"
						android:layout_width="wrap_content"
						android:layout_marginLeft="7dip"
						android:layout_height="wrap_content"></TextView>
					<TextView
						android:id="@+id/hours"
						android:text="0"
						android:layout_marginRight="10dip"
						android:layout_alignParentRight="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"></TextView>
				</RelativeLayout>

				<!-- DAYS -->

				<RelativeLayout
					android:layout_width="fill_parent"
					android:layout_margin="1dip"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<TextView
						android:id="@+id/days_label"
						android:text="@string/days"
						android:layout_marginLeft="7dip"
						android:layout_alignParentLeft="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"></TextView>
					<TextView
						android:id="@+id/days"
						android:text="0"
						android:layout_marginRight="10dip"
						android:layout_alignParentRight="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"></TextView>
				</RelativeLayout>

				<!-- WEEKS -->

				<RelativeLayout
					android:layout_width="fill_parent"
					android:layout_margin="1dip"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<TextView
						android:id="@+id/weeks_label"
						android:text="@string/weeks"
						android:layout_marginLeft="7dip"
						android:layout_alignParentLeft="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"></TextView>
					<TextView
						android:id="@+id/weeks"
						android:text="0"
						android:layout_marginRight="10dip"
						android:layout_alignParentRight="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"></TextView>
				</RelativeLayout>

				<!-- MONTHS -->

				<RelativeLayout
					android:layout_width="fill_parent"
					android:layout_margin="1dip"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<TextView
						android:id="@+id/months_label"
						android:text="@string/months"
						android:layout_marginLeft="7dip"
						android:layout_alignParentLeft="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"></TextView>
					<TextView
						android:id="@+id/months"
						android:text="0"
						android:layout_marginRight="10dip"
						android:layout_alignParentRight="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"></TextView>
				</RelativeLayout>

				<!-- POSOSTO -->

				<RelativeLayout
					android:layout_width="fill_parent"
					android:layout_margin="1dip"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<TextView
						android:id="@+id/pososto_label"
						android:text="@string/pososto"
						android:layout_marginLeft="7dip"
						android:layout_alignParentLeft="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"></TextView>
					<TextView
						android:id="@+id/pososto"
						android:text="0%"
						android:layout_marginRight="10dip"
						android:layout_alignParentRight="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"></TextView>
				</RelativeLayout>

				<!-- PROGRESS BAR -->

				<ProgressBar
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					style="?android:attr/progressBarStyleHorizontal"
					android:id="@+id/posostoProgress"
					android:max="100"
					android:progress="20"
					android:layout_margin="8dip" />
			</LinearLayout>
		</ScrollView>
	</LinearLayout>
</LinearLayout>
